force-app/main/default/objects/Reseller__c/Reseller__c.object-meta.xml
<CustomObject>
    <description>Channel partner that resells VoltStream Mobility EV charging products and services to end customers in Germany. Matched to Opportunities via the company email.</description>
    <label>Reseller</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resellers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>