force-app/main/default/objects/Reseller__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this reseller is currently active in the channel program. Inactive resellers are excluded from Opportunity matching: ResellerSelector filters on Active__c = true, so the OpportunityTrigger never links a deal to an inactive reseller.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>