force-app/main/default/objects/Reseller__c/fields/Betriebshaftpflicht_Deckung__c.field-meta.xml
<CustomField>
    <fullName>Betriebshaftpflicht_Deckung__c</fullName>
    <description>Public liability cover. There is no statutory insurance duty for electricians, so this is commercial due diligence rather than a legal gate - it warns, it does not block. Market convention is 3 million EUR minimum.</description>
    <label>Betriebshaftpflicht-Deckung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>