force-app/main/default/objects/Reseller__c/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <description>Primary contact email for the reseller company. Used as the matching key by OpportunityTriggerHandler to auto-populate the Reseller lookup on Opportunities.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the reseller's primary company email. This is the matching key for incoming Opportunities.</inlineHelpText>
    <label>Company Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>