force-app/main/default/objects/Reseller__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>"Germany"</defaultValue>
    <description>Country where the reseller operates. Defaults to Germany since VoltStream's primary market is DE.</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>