force-app/main/default/objects/Reseller__c/fields/Datenschutz_Rolle__c.field-meta.xml
<CustomField>
    <fullName>Datenschutz_Rolle__c</fullName>
    <description>GDPR role of this partner, which decides which data-protection instrument is actually required. A reseller contracting in its own name is an independent controller and an Art. 28 AVV is the wrong document - signing one misdescribes the relationship and implies a right to instruct that does not exist (cf. EDPB Guidelines 07/2020, Rn. 68). Modelled as a role picklist rather than an AVV-signed checkbox for exactly that reason.</description>
    <label>Datenschutz-Rolle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eigenstaendig Verantwortlicher</fullName>
                <default>true</default>
                <label>Eigenständig Verantwortlicher</label>
            </value>
            <value>
                <fullName>Gemeinsam Verantwortlicher Art 26</fullName>
                <label>Gemeinsam Verantwortlicher (Art. 26)</label>
            </value>
            <value>
                <fullName>Auftragsverarbeiter Art 28</fullName>
                <label>Auftragsverarbeiter (Art. 28)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>