force-app/main/default/objects/Reseller__c/fields/Freistellungsbescheinigung_Bis__c.field-meta.xml
<CustomField>
    <fullName>Freistellungsbescheinigung_Bis__c</fullName>
    <description>Expiry of the partner&apos;s exemption certificate under §48b EStG. Wallbox and PV installation count as Bauleistungen, so without a valid certificate VoltStream must withhold 15% Bauabzugsteuer from the payment (§48 EStG) - the money comes out of our side, not theirs. This is the one document whose lapse has a direct cash consequence, which is why it blocks invoicing rather than activation.</description>
    <label>Freistellungsbescheinigung gültig bis</label>
    <type>Date</type>
</CustomField>