force-app/main/default/objects/Reseller__c/fields/Handwerksrolle_Nr__c.field-meta.xml
<CustomField>
    <fullName>Handwerksrolle_Nr__c</fullName>
    <description>Handwerksrolle registration. Elektrotechniker is Anlage A Nr. 25 (Meisterpflicht), and deletion from the Handwerksrolle cascades into deletion from the Installateurverzeichnis (Grundsätze §2.3.1). Left optional because §7(2), §7b and §§3/5 HwO give genuine routes in without a Meisterbrief.</description>
    <label>Handwerksrolle-Nr.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>