force-app/main/default/objects/Reseller__c/fields/Installateurverzeichnis_Gueltig_Bis__c.field-meta.xml
<CustomField>
    <fullName>Installateurverzeichnis_Gueltig_Bis__c</fullName>
    <description>Expiry of the Installateurverzeichnis entry. Capped at five years with no automatic renewal (BDEW/ZVEH Grundsätze §5.1); §5.2 says the firm should be notified three months before expiry, which is where the reminder window comes from. Once it lapses the partner may not legally perform the installation.</description>
    <label>Installateurverzeichnis gültig bis</label>
    <type>Date</type>
</CustomField>