force-app/main/default/objects/Reseller__c/fields/Installateurverzeichnis_Nr__c.field-meta.xml
<CustomField>
    <fullName>Installateurverzeichnis_Nr__c</fullName>
    <description>Registration number in a grid operator&apos;s Installateurverzeichnis. NAV §13(2) allows work behind the house fuse only by a registered company, so this is the legal gate on installation work, not a nice-to-have. Registration is company-level and held by exactly ONE grid operator (BDEW/ZVEH Grundsätze §2.1.3), and one entry is valid nationwide (§2.2.6) - which is why this is a single field and not a junction to every DSO.</description>
    <label>Installateurverzeichnis-Nr.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>