force-app/main/default/objects/Reseller__c/fields/Netzbetreiber__c.field-meta.xml
<CustomField>
    <fullName>Netzbetreiber__c</fullName>
    <description>The grid operator holding this partner&apos;s Installateurverzeichnis entry (their home Niederlassung). Needed to verify the registration and to route NAV §19 notifications.</description>
    <label>Netzbetreiber</label>
    <length>80</length>
    <type>Text</type>
</CustomField>