force-app/main/default/objects/Reseller__c/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <description>Channel tier. Drives the CPQ volume discount schedule, so it is deliberately a restricted picklist: a typo here would silently mis-price a quote.</description>
    <label>Partner Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
                <default>true</default>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Silber</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>