force-app/main/default/objects/Reseller__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Primary contact phone for the reseller company.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>