force-app/main/default/objects/Reseller__c/fields/Reseller_Type__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Type__c</fullName>
    <description>Channel partner segment. Reframed from generic verticals to the German OEM and dealer-network channel, because that is the channel this business actually sells through: vehicles are sold by franchised dealers, and the charging hardware follows the vehicle. Elektroinstallationsunternehmen is the one segment that carries a legal gate rather than a commercial one - only a company entered in a grid operator&apos;s Installateurverzeichnis may work behind the house fuse (NAV §13(2)).</description>
    <label>Reseller Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vertragshaendler</fullName>
                <label>Vertragshändler (OEM)</label>
            </value>
            <value>
                <fullName>Autohausgruppe</fullName>
            </value>
            <value>
                <fullName>Werkstattkette</fullName>
            </value>
            <value>
                <fullName>Elektroinstallationsunternehmen</fullName>
            </value>
            <value>
                <fullName>Flottenbetreiber</fullName>
            </value>
            <value>
                <fullName>Energieversorger</fullName>
                <label>Energieversorger / Stadtwerke</label>
            </value>
            <value>
                <fullName>Parkraumbetreiber</fullName>
            </value>
            <value>
                <fullName>Immobilienbetreiber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>