force-app/main/default/objects/Reseller__c/fields/VEFK_Name__c.field-meta.xml
<CustomField>
    <fullName>VEFK_Name__c</fullName>
    <description>Verantwortliche Elektrofachkraft per DIN VDE 1000-10. The Installateurverzeichnis qualification attaches to this named, permanently employed person, not to the company in the abstract. If the last VEFK leaves, the entry is suspended and deleted after three months (Grundsätze §2.2.5), so an empty value here is a live compliance risk.</description>
    <label>Verantwortliche Elektrofachkraft</label>
    <length>80</length>
    <type>Text</type>
</CustomField>