force-app/main/default/objects/Reseller__c/listViews/Active_Resellers.listView-meta.xml
<ListView>
    <fullName>Active_Resellers</fullName>
    <columns>NAME</columns>
    <columns>Company_Email__c</columns>
    <columns>Reseller_Type__c</columns>
    <columns>Country__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Resellers</label>
</ListView>