force-app/main/default/objects/Reseller__c/listViews/All_Resellers.listView-meta.xml
<ListView>
    <fullName>All_Resellers</fullName>
    <columns>NAME</columns>
    <columns>Company_Email__c</columns>
    <columns>Reseller_Type__c</columns>
    <columns>Country__c</columns>
    <columns>Active__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Resellers</label>
</ListView>